feat:redis cache
Demo for read spring-data-redis

The murder nurse‘s salary exceed mine, do you know how I feel?

--- a/redis/spring-cache/pom.xml
+++ b/redis/spring-cache/pom.xml
@@ -49,7 +49,7 @@
 
     <parent>
         <groupId>com.zhiyin</groupId>
-        <artifactId>msg-notify</artifactId>
+        <artifactId>redis</artifactId>
         <version>4.3.0-SNAPSHOT</version>
     </parent>
 
