--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -6,7 +6,6 @@
     <packaging>pom</packaging>
     <version>4.3.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <java.version>1.7</java.version>
@@ -28,9 +27,9 @@
     </properties>
 
     <modules>
-        <module>redisson</module>
+        <!--<module>redisson</module>-->
         <module>spring-cache</module>
-        <module>ecache</module>
+        <!--<module>ecache</module>-->
     </modules>
 
 
