--- a/jdk-learn/pom.xml
+++ b/jdk-learn/pom.xml
@@ -7,25 +7,58 @@
     <groupId>com.zhiyin.jdk</groupId>
     <artifactId>jdk-learn</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <parent>
-        <groupId>com.zhiyin.frame</groupId>
-        <artifactId>frame-base</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
+    <!--<parent>-->
+        <!--<groupId>com.zhiyin.frame</groupId>-->
+        <!--<artifactId>frame-base</artifactId>-->
+        <!--<version>0.0.1-SNAPSHOT</version>-->
+    <!--</parent>-->
 
     <properties>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <modules>
         <module>basic</module>
+        <module>classinit</module>
         <module>classloader</module>
         <module>nio</module>
         <module>multi</module>
         <module>java-nio-server-master</module>
-        <module>java-dynamic-load-jar</module>
+        <!--<module>java-dynamic-load-jar</module>-->
         <module>proxy-study</module>
         <module>timer</module>
+        <module>threadpool</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.13</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
