--- a/jdk-learn/classloader/pom.xml
+++ b/jdk-learn/classloader/pom.xml
@@ -4,12 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jdk-classloader</artifactId>
+    <artifactId>classloader</artifactId>
 
     <parent>
         <groupId>com.zhiyin.jdk</groupId>
         <artifactId>jdk-learn</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
