feat:mysql acid
Use spring and mybatis test db acid.

HG:I’m not a DBA, they require the skill too!.

--- a/jdk-learn/pom.xml
+++ b/jdk-learn/pom.xml
@@ -21,6 +21,7 @@
 
     <modules>
         <module>basic</module>
+        <module>security</module>
         <module>classinit</module>
         <module>classloader</module>
         <module>nio</module>
