--- a/jdk-learn/proxy-study/pom.xml
+++ b/jdk-learn/proxy-study/pom.xml
@@ -13,6 +13,13 @@
   </parent>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-parent</artifactId>
+      <version>1.7.16</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
