--- a/jdk-learn/proxy-study/pom.xml
+++ b/jdk-learn/proxy-study/pom.xml
@@ -12,6 +12,9 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
+  <properties>    <asm.version>5.2</asm.version>
+  </properties>
+
   <dependencies>
 
     <dependency>
@@ -39,11 +42,24 @@
       <version>1.2.17</version>
     </dependency>
 
+    <!--<dependency>-->
+      <!--<groupId>cglib</groupId>-->
+      <!--<artifactId>cglib-nodep</artifactId>-->
+      <!--&lt;!&ndash;<version>3.2.1</version>&ndash;&gt;-->
+      <!--<version>2.2.2</version>-->
+    <!--</dependency>-->
+
     <dependency>
       <groupId>cglib</groupId>
-      <artifactId>cglib-nodep</artifactId>
+      <artifactId>cglib</artifactId>
       <version>3.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>${asm.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.apache.commons</groupId>
