--- a/jdk-learn/pom.xml
+++ b/jdk-learn/pom.xml
@@ -20,6 +20,7 @@
     </properties>
 
     <modules>
+        <module>volatile</module>
         <module>reference</module>
         <module>basic</module>
         <module>security</module>
