--- a/spring/spring-source/SpringTran/src/log4j.properties
+++ b/spring/spring-source/SpringTran/src/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=INFO,logfile,stdout
             
 #log4j.logger.org.springframework.web.servlet=INFO,db
 
-#log4j.logger.org.springframework.beans.factory.xml=INFO
+#log4j.logger.org.springframework.beans.factorybean.xml=INFO
 #log4j.logger.com.neam.stum.user=INFO,db
 
 #log4j.appender.stdout=org.apache.log4j.ConsoleAppender
