--- a/mybatis-study/pom.xml
+++ b/mybatis-study/pom.xml
@@ -12,7 +12,26 @@
 
     <modules>
         <module>basic</module>
+        <module>boot-mybatis</module>
         <module>cache</module>
+        <!--<module>mybatis-plugin</module>-->
+        <!--<module>mybatis-page</module>-->
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>3.4.4</version>
+            </dependency>
+            <!-- mybatis spring -->
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
