--- a/zookeeper-study/pom.xml
+++ b/zookeeper-study/pom.xml
@@ -32,6 +32,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
 
 	<dependency>
 		<groupId>org.apache.zookeeper</groupId>
@@ -39,6 +44,11 @@
 		<version>3.4.6</version>
 	</dependency>
 
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+            <version>${curator.version}</version>
+        </dependency>
 
       <dependency>
           <groupId>org.apache.curator</groupId>
