--- a/byteop/pom.xml
+++ b/byteop/pom.xml
@@ -18,6 +18,7 @@
         <java.version>1.7</java.version>
         <slf4j.version>1.7.8</slf4j.version>
         <logback.version>1.1.2</logback.version>
+        <asm.version>5.1</asm.version>
     </properties>
 
     <modules>
@@ -27,9 +28,94 @@
         <module>jagent</module>
         <module>jagent-demo</module>
         <module>byte-buddy-agent-example-master</module>
+        <module>javassist-demo</module>
+        <module>decompiler</module>
+        <module>instrument</module>
+        <module>asm-demo</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.8</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.sun</groupId>
+                <artifactId>tools</artifactId>
+                <version>1.6.0</version>
+                <scope>system</scope>
+                <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+            </dependency>
+
+
+            <!-- slf4j -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>19.0</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-all</artifactId>
+                <version>${asm.version}</version>
+            </dependency>
+
+            <!--<dependency>-->
+                <!--<groupId>org.ow2.asm</groupId>-->
+                <!--<artifactId>asm</artifactId>-->
+                <!--<version>${asm.version}</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.ow2.asm</groupId>-->
+                <!--<artifactId>asm-commons</artifactId>-->
+                <!--<version>${asm.version}</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.ow2.asm</groupId>-->
+                <!--<artifactId>asm-util</artifactId>-->
+                <!--<version>${asm.version}</version>-->
+            <!--</dependency>-->
+
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
